<resources>
    <string name="app_name">CS4084 Final Project</string>

    <!--

    ai_ = Advertisement Item
    ma_ = Main Activity
    ca_ = Create Advertisement Activity

    -->


    <string name="refineSearch">Refine Search</string>
    <string name="searchButton">Search Ads</string>
    <string name="createAd">Create Advertisement</string>
    <string name="tempContentDescription">Profile Image</string>

    <!-- Main Activity -->
    <string name="ma_logout_button">Logout</string>
    <string name="ma_profile_button">Profile</string>
    <string name="ma_add_document_button">Open Advertisement View (TEST)</string>

    <!-- Create Advertisement Activity -->
    <string name="ca_adTitle">Advertisement Title</string>
    <string name="ca_adTitleHint">Title</string>
    <string name="ca_descTitle">Advertisement Description</string>
    <string name="ca_descHint">Description</string>
    <string name="ca_picture_section_title">Advertisement Image</string>
    <string name="ca_choose_file_btn">Choose File</string>
    <string name="ca_take_picture_btn">Take Picture</string>
    <string name="ca_image_content_desc">Upload Image</string>
    <string name="ca_usedRadioButton">Used</string>
    <string name="ca_newRadioButton">Brand New</string>
    <string name="ca_qualityTitle">Item Quality</string>
    <string name="ca_submitAdvertisementButton">Create Advertisement</string>
    <string name="ca_priceTitle">Price</string>
    <string name="ca_priceHint">Price</string>
    <string name="ca_mapTitle">Location</string>
    <string name="ca_mapBtn">Choose Location</string>

    <!-- Advertisement Item -->
    <string name="ai_title">Ride-on Lawn Mower</string>
    <string name="ai_price">395.99</string>
    <string name="ai_quality">Brand New</string>
    <string name="ai_distance">23km</string>
    <string name="ai_seller">GreenLawn Mowers</string>
    <string name="ai_imageContentDescription">Advertisement Item Image</string>

    <!-- Advertisement Item Mini -->
    <string name="aim_editButtonText">Edit</string>
    <string name="aim_priceText">€ %1$s</string>

    <!-- View Advertisement Activity -->
    <string name="va_adTitle">Listing Title</string>;
    <string name="va_adPrice">Price : ?</string>
    <string name="va_sellerDetails">Seller Details</string>
    <string name="va_purchaseBtn">Purchase</string>

    <!-- Edit Advertisement Activity -->
    <string name="ea_submitBtn">Edit Advertisement</string>

    <!-- Search Activity -->
    <string name="sa_search_placeholder">Search</string>
    <string name="sa_price_title_string">Price</string>
    <string name="sa_max_price_title_string">Max</string>
    <string name="sa_min_price_title_string">Min</string>

    <!-- Register Activity -->
    <string name="re_name_hint_string">FullName</string>
    <string name="re_email_hint_string">Email Address</string>
    <string name="re_password_hint_string">Password</string>
    <string name="re_register_button_string">Register</string>
    <string name="re_login_button_string">Already registered? Login here</string>

    <!-- Profile Page -->
    <string name="pp_ownedAdsTitle">Your Advertisements</string>
    <string name="pp_purchasedAdsTitle">Your Purchased Advertisements</string>

</resources>
