<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp" >

    <ImageView
        android:id="@+id/advertisementImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/ai_imageContentDescription"/>

    <TextView
        android:id="@+id/advertisementTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/advertisementImage"
        android:layout_alignBottom="@id/advertisementImage"
        android:text="@string/ai_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/advertisementPrice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/advertisementImage"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:text="@string/ai_price"
        android:textAlignment="center" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/advertisementImage"
        android:layout_margin="5dp"
        android:columnCount="3"
        android:rowCount="1">

        <TextView
            android:id="@+id/advertisementQuality"
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/ai_quality"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/advertisementDistance"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/ai_distance"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/advertisementSeller"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/ai_seller"
            android:textAlignment="viewEnd" />

    </GridLayout>

</RelativeLayout>